...
                app:cardCornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:gravity="start"
                    android:hint="@string/todo_placeholder"
                    android:inputType="textMultiLine"
...
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="8dp" />

            <LinearLayout
                android:id="@+id/delete_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal"
                android:visibility="gone">

...
